--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+        </style>
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,25 +11,39 @@
     <title>Draw it!</title>
 </head>
 <body>
-    <div id = menu></div>
-    <div id = canvas>
-        <div class = pixel></div>
-        <div class = pixel></div>
-        <div class = pixel></div>
-        <div class = pixel></div>
-        <div class = pixel></div>
-        <div class = pixel></div>
-        <div class = pixel></div>
-        <div id=singleton class = pixel></div>
-        <div class = pixel></div>
-        <div class = pixel></div>
-        <div class = pixel></div>
-        <div class = pixel></div>
-        <div class = pixel></div>
-        <div class = pixel></div>
-        <div class = pixel></div>
-        <div class = pixel></div>
+    <div id = header>Etch-a-Sketch</div>
+    <div id = content>
+        <div id = menu1 class="menu">Color selection
+            <button>Click ME</button>
+            <button>Click ME</button>
+            <button>Click ME</button>
+            <button>Click ME</button>
+        </div>
+        <div id = canvas>
+            <div class = pixel></div>
+            <div class = pixel></div>
+            <div class = pixel></div>
+            <div class = pixel></div>
+            <div class = pixel></div>
+            <div class = pixel></div>
+            <div class = pixel></div>
+            <div id=singleton class = pixel></div>
+            <div class = pixel></div>                       
+            <div class = pixel></div>
+            <div class = pixel></div>
+            <div class = pixel></div>
+            <div class = pixel></div>
+            <div class = pixel></div>
+            <div class = pixel></div>
+            <div class = pixel></div>
 
+        </div>
+        <div id = menu2 class = "menu">Canvas size/resolution
+            <button>Click ME</button>
+            <button>Click ME</button>
+            <button>Click ME</button>
+            <button>Click ME</button>
+        </div>
     </div>
     
 </body>
