--- a/index.html
+++ b/index.html
@@ -15,15 +15,13 @@
     <div id = header>Etch-a-Sketch</div>
     <div id = content>
         <div id = menu1 class="menu">Select Color/Paint
-            <div id = redSelector class = "button">Red</div>
-            <div id = greenSelector class = "button">Green</div>
-            <div id = blueSelector class = "button">Blue</div>
-            <div id = randSelector class = "button">Random</div>
+            <div id = redButton class = "button">Red</div>
+            <div id = greenButton class = "button">Green</div>
+            <div id = blueButton class = "button">Blue</div>
+            <div id = randButton class = "button">Random</div>
         </div>
-        <div id = canvas>
-            <!-- pixels go here -->
-        </div>
-        <div id = menu2 class = "menu">Canvas size/resolution
+        <div id = canvas></div>
+        <div id = menu2 class = "menu">Canvas Size/Resolution
             <div id = pixels25 class = "button">5x5 Canvas</div>
             <div id = pixels64 class = "button">8x8 Canvas</div>
             <div id = pixels100 class = "button">10x10 Canvas</div>
